<resources>
    <!-- StoryBuilderMain -->
    <string name="app_name">StoryBuilder</string>
    <string name="about">About</string>
    <string name="about_activity">About StoryBuilder</string>
    <string name="empty">Nothing here yet.</string>
    <string name="title_activity_create_story">Story Creation</string>

    <!-- For the search layout -->
    <string name="search_query_empty_view">Generating results&#8230;</string>
    <string name="search_hint">Search stories</string>

    <!-- SBDialog -->
    <string name="dialog_instructions">Create a story</string>
    <string name="dialog_title">Title</string>
    <string name="dialog_desc">Synopsis/Description</string>
    <string name="dialog_genre">Genre</string>
    <string name="create_story">Create</string>
    <string name="cancel_story">Cancel</string>

    <!--SBDeleteDialog -->
    <string name="delete_warning">Warning</string>
    <string name="delete_entry">Are you sure you want to delete this entry?</string>
    <string name="delete_no_go_back">This action cannot be undone.</string>
    <string name="delete_yes">Delete</string>
    <string name="delete_no">Cancel</string>

    <!-- For FAB menu -->
    <string name="add_character">Add A Character</string>
    <string name="add_location">Add A Location</string>
    <string name="add_event">Add An Event</string>
    <string name="add_plot">Add A Plot</string>

    <!-- For Story -->
    <string name="title_activity_add_characters">Add New Characters</string>
    <string name="title_activity_add_event">Add Events</string>
    <string name="title_activity_add_locations">Add Locations</string>
    <string name="title_activity_add_character">Add A Character</string>
    <string name="add_an_element">Save</string>

    <!-- For the Story tabs -->
    <string name="tab_characters">Characters</string>
    <string name="tab_event">Events</string>
    <string name="tab_locations">Locations</string>

    <!-- For the Story lists -->
    <string name="list_story_title">Title</string>
    <string name="list_story_genre">Genre</string>
    <string name="list_character_name">Name</string>
    <string name="list_character_age">Age</string>
    <string name="list_location_title">Name</string>
    <string name="list_location_location">Location</string>
    <string name="list_event_title">Title</string>

    <string name="title_activity_tab_viewer">TabViewer</string>
    <string name="title_activity_sqldatabase">SQLDatabase</string>

    <!-- For the AddCharacterElements -->
    <string name="character_instructions">Add A Character</string>
    <string name="character_name">Name</string>
    <string name="character_age">Age</string>
    <string name="character_protagonist">Main Character</string>
    <string name="character_antagonist">Antagonist</string>
    <string name="character_gender">Gender</string>
    <string name="character_male">Male</string>
    <string name="character_female">Female</string>
    <string name="character_other">Other</string>
    <string name="character_birth">Place of birth</string>
    <string name="character_history">This character\'s past</string>
    <string name="character_goals">What is this character\'s goals?</string>
    <string name="character_conflicts">Describe this character\'s conflicts</string>
    <string name="character_epiphany">What epiphany changes this character?</string>
    <string name="character_personality">Personality</string>
    <string name="character_notes">Notes</string>

    <!-- For the AddLocationElements -->
    <string name="location_instructions">Add A Location</string>
    <string name="location_name">Name or title</string>
    <string name="location_location">Located where (e.g. country, planet, locality)?</string>
    <string name="location_desc">Description</string>
    <string name="location_importance">Importance of this location to the story</string>
    <string name="location_events">What events take place in this location?</string>
    <string name="location_notes">Notes</string>

    <!-- For the AddEventElements -->
    <string name="event_instructions">Add A Event</string>
    <string name="event_title">Title (e.g. Sara finds a lost city)</string>
    <string name="event_desc">Describe the event</string>
    <string name="event_characters">What characters make an appearance?</string>
    <string name="event_summary">Summary of this event/act</string>
    <string name="event_notes">Notes</string>

    <!-- For the AddPlots -->
    <string name="plot_instructions">Add A Plot</string>
    <string name="plot_main">Main Plot</string>
    <string name="plot_sub">Sub Plot</string>
    <string name="plot_title">Title of plot</string>
    <string name="plot_desc">Describe this plot line</string>

    <!-- For all activities/fragments -->
    <string name="cancel">Cancel</string>
    <string name="OK">Save</string>

    <!-- About page -->
    <string name="sb_title">About StoryBuilder</string>
    <string name="developer_header">Developed by</string>
    <string name="developer">TahaStudio</string>
    <string name="developer_email">taha.studio.apps@gmail.com</string>

    <string name="version">Version 1.1</string>
    <string name="open_source">StoryBuilder is released under GPL.</string>
    <string name="sb_link">https://github.com/nuratun/StoryBuilder</string>

    <string name="credit_header">Credits</string>
    <string name="fab_credit">FAB menu by</string>
    <string name="fab_author_name">Jerzy Chalupski</string>
    <string name="fab_link">https://github.com/futuresimple/android-floating-action-button</string>

    <string name="icons_credit">Icons designed by</string>
    <string name="banner_credit">Typewriter icon designed by</string>
    <string name="icons">Freepik</string>
    <string name="icons_link">www.freepik.com</string>
    <string name="banner_link">www.freepik.com/free-vector/typewriting-illustration-vector-free_756502.htm</string>

    <string name="assets_credit">Some assets generated by</string>
    <string name="assets_author">Android Assets Studio</string>
    <string name="assets_link">https://romannurik.github.io/AndroidAssetStudio/index.html</string>
</resources>
