<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_location"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context="tahastudio.storybuilder.ShowStory">

    <RelativeLayout
        android:padding="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/activity_add_location_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/add_location_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_location"
                android:text="@string/location_instructions"/>
        </LinearLayout>

        <EditText
            android:id="@+id/sb_location_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/location_name"
            android:layout_below="@+id/activity_add_location_top"/>

        <EditText
            android:id="@+id/sb_location_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/location_location"
            android:layout_below="@+id/sb_location_name"/>

        <EditText
            android:id="@+id/sb_location_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_desc"
            android:layout_below="@+id/sb_location_location"/>

        <EditText
            android:id="@+id/sb_location_importance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_importance"
            android:layout_below="@+id/sb_location_desc"/>

        <EditText
            android:id="@+id/sb_location_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_events"
            android:layout_below="@+id/sb_location_importance"/>

        <EditText
            android:id="@+id/sb_location_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_notes"
            android:layout_below="@+id/sb_location_events"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end|bottom"
            android:background="@color/white"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/location_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/add_the_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/OK" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
