<LinearLayout
    android:id="@+id/add_story"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="30dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/dialog_instructions"
        android:drawableStart="@drawable/ic_create_story"
        android:drawablePadding="5dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/sb_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_title" />

    <Spinner
        android:id="@+id/sb_genre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_dialog_genre"
        android:hint="@string/dialog_genre" />

    <EditText
        android:id="@+id/sb_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_desc" />


</LinearLayout>
