<LinearLayout
    android:id="@+id/add_story"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/Dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/delete_warning"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@color/primary_text_light"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/delete_confirmation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_entry"
        android:gravity="center_horizontal" />


    <TextView
        android:id="@+id/delete_last_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/delete_no_go_back"
        android:gravity="center_horizontal" />
</LinearLayout>