<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/add_plotline"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tahastudio.storybuilder.ShowStory">

    <LinearLayout
        android:id="@+id/activity_add_plot_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/plot_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_plotline"
            android:text="@string/plot_instructions"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/main_plot_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/plot_main"
        android:onClick="mPlotline"
        android:layout_below="@+id/activity_add_plot_top"/>

    <EditText
        android:id="@+id/sb_plotline_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_plot_checkbox"
        android:hint="@string/plot_title" />

    <EditText
        android:id="@+id/sb_plotline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sb_plotline_name"
        android:hint="@string/plot_desc" />

    <EditText
        android:id="@+id/sb_plotline_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sb_plotline"
        android:hint="@string/plot_notes" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@id/sb_plotline_notes"
        android:gravity="end|bottom">

        <Button
            android:id="@+id/plot_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/add_the_plotline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/plot_add" />
    </LinearLayout>

</RelativeLayout>