<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_plot"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Story">

    <ScrollView
        android:fillViewport="true"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="20dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/activity_add_plot_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_plot_instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_plot"
                    android:drawablePadding="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/plot_instructions" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/add_plot_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_below="@id/activity_add_plot_top">

                <RadioButton
                    android:id="@+id/sb_plot_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plot_main" />

                <RadioButton
                    android:id="@+id/sb_plot_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plot_sub" />
            </RadioGroup>

            <EditText
                android:id="@+id/sb_plot_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/plot_title"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:layout_below="@id/add_plot_type"/>

            <EditText
                android:id="@+id/sb_plot_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/plot_desc"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences|textMultiLine|textAutoComplete|textAutoCorrect"
                android:layout_below="@id/sb_plot_title" />

            <EditText
                android:id="@+id/sb_plot_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/character_notes"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences|textMultiLine|textAutoComplete|textAutoCorrect"
                android:layout_below="@id/sb_plot_desc"/>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom|end"
        android:background="@color/white"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/add_the_plot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/OK" />
    </LinearLayout>

</RelativeLayout>